--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -8,7 +8,7 @@
         <image src="../../img/icon10.png" class="input-close"></image>
       </view>
       <view class="input-search"><text>安全指数</text>
-        <image src="../../img/icon11.png" class="search-img" bindtap="searchIptVal"></image>
+        <image src="../../img/icon11.png" class="search-img" bindtap="searchIptVal" data-item="{{matchCityList.length>0?matchCityList[0]:''}}"></image>
       </view>
     </view>
     <view class="search-wrap" wx:if="{{matchCityList.length>0}}">
@@ -23,7 +23,7 @@
         <image src="../../img/icon12.png" class="hot-image"></image> 热点城市搜索：
       </view>
       <view class="hot-box">
-        <text class="hot-list" wx:for="{{popularCityList}}" wx:key="index">{{item.countryNameCn}} · {{item.cityNameCn}}</text>
+        <text class="hot-list" wx:for="{{popularCityList}}" wx:key="index" bindtap="searchIptVal" data-item="{{item}}">{{item.countryNameCn}} · {{item.cityNameCn}}</text>
       </view>
     </view>
   </view>
