--- a/pages/citydetail/citydetail.wxml
+++ b/pages/citydetail/citydetail.wxml
@@ -58,7 +58,7 @@
     </view>
   </block>
     <view class="title-style">近3天天气情况</view>
-    <view class="weather-wrap" wx:if="{{weatherData.temperature!=''}}">
+    <view class="weather-wrap" wx:if="{{weatherData.temperature}}">
       <view class="weather-info">
         <!-- ℃ -->
         <view class="weather-left">{{weatherData.temperature}} <text class="weather-tip">{{weatherData.naweather}}</text></view>
@@ -69,7 +69,7 @@
               <image src="../../img/icon25.png" class="icon25"></image>
               <view class="weather-top-info">
                 <view>空气湿度</view>
-                <view>81%</view>
+                <view>{{weatherData.humidity}}</view>
               </view>
             </view>
             <view class="weather-top">
@@ -77,7 +77,7 @@
                 <image src="../../img/icon26.png" class="icon26"></image>
                 <view class="weather-top-info">
                   <view>紫外线</view>
-                  <view>--</view>
+                  <view>{{weatherData.ziwaixian}}</view>
                 </view>
               </view>
             </view>
@@ -86,7 +86,7 @@
                 <image src="../../img/icon27.png" class="icon27"></image>
                 <view class="weather-top-info">
                   <view>无风</view>
-                  <view>0Km/h</view>
+                  <view>{{weatherData.windpower}}</view>
                 </view>
               </view>
             </view>
@@ -127,7 +127,7 @@
  
 
   <view class="title-style">本年天气情况</view>
-  <block wx:if="{{true}}">
+  <block wx:if="{{yearDataShow.length>0}}">
     <view class="year-title">
       <text class="year-text1">月份</text>
       <text class="year-text2">日均最高气温</text>
